[gd_scene load_steps=8 format=2]

[ext_resource path="res://Audio/Autoload/MusicController.gd" type="Script" id=1]
[ext_resource path="res://Audio/SFX/Pickup/02_Heal_02.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/BGM/Combat/Dark _Atmosphere13_Looped_24bit.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/BGM/Ambience.mp3" type="AudioStream" id=4]
[ext_resource path="res://Audio/BGM/Combat/It&#039;s Time To Run.ogg" type="AudioStream" id=5]
[ext_resource path="res://Audio/BGM/Combat/Death At My Heels.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=89]
resource_name = "Ambience"
length = 290.0

[node name="MusicController" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="HealSFX" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
bus = "SFX"

[node name="NormalCombat" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
bus = "Music"

[node name="BossCombat" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
bus = "Music"

[node name="Level1BGM" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = 1.0
bus = "Music"

[node name="DarkAmbience" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
bus = "Music"

[node name="AmbiencePlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Ambience = SubResource( 89 )

[node name="OutsideBGM" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
